# GachAnki

./: .gitignore  Makefile  README.md  addon.json  pyproject.toml  vendorize.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
designer/: degeneranki.ui  inventory.ui
src/degeneranki/: __init__.py  ambr.py  config.json  database.py  degeneranki-0.1.ankiaddon  gacha.py  main.py
src/degeneranki/api/: ambr.py
src/degeneranki/gui/forms/: __init__.py
src/degeneranki/gui/forms/qt5/: degeneranki.py  inventory.py
src/degeneranki/gui/forms/qt6/: __init__.py  degeneranki.py  inventory.py
src/degeneranki/user_files/: README.txt
supabase/: inventory.schema.json  user_management_starter.sql
tools/: pb_schema.json
tools/designer/: degeneranki.ui
