[project]
name = 'degeneranki'
version = '0.4.1'

[project.optional-dependencies]
dev = [
    'vendoring==1.2.0',
]

[tool.vendoring]
destination = 'src/degeneranki/_vendor/'
requirements = 'src/degeneranki/_vendor/vendors.txt'
namespace = 'degeneranki._vendor'
protected-files = [
    '__init__.py',
    'README.md',
    'vendors.txt',
]
patches-dir = 'tools/vendoring/patches'

[tool.vendoring.transformations]
substitute = [
    # storage3
    { match='dateutil.parser', replace='degeneranki._vendor.dateutil.parser' },
    # pydantic
    { match='pydantic.color', replace='degeneranki._vendor.pydantic.color' },
    { match='pydantic.types', replace='degeneranki._vendor.pydantic.types' },
    { match='pydantic.dataclasses', replace='degeneranki._vendor.pydantic.dataclasses' },
]
drop = [
    'bin/',
    '*.so',
    'typing.*',
    '*/tests/',
]
