[project]
name = 'degeneranki'
version = '0.4.1'

[project.optional-dependencies]
dev = [
    'vendoring==1.2.0',
]

[tool.vendoring]
destination = 'src/degeneranki/_vendor/'
requirements = 'src/degeneranki/_vendor/vendors.txt'
namespace = '._vendor'
protected-files = [
    '__init__.py',
    'README.md',
    'vendors.txt',
]
patches-dir = 'tools/vendoring/patches'

[tool.vendoring.transformations]
substitute = []
drop = [
    'bin/',
    '*.so',
    'typing.*',
    '*/tests/',
]
